# self-reg-factory

./: .gitignore  CMakeLists.txt  ctagAudioPlugin.hpp  ctagAudioPluginAM.cpp  ctagAudioPluginAM.hpp  ctagAudioPluginFM.cpp  ctagAudioPluginFM.hpp  main.cpp
ctag/: .gitignore  CMakeLists.txt  ctagAudioPlugin.hpp  ctagAudioPluginAM.cpp  ctagAudioPluginAM.hpp  ctagAudioPluginFM.cpp  ctagSoundProcessor.hpp  ctagSoundProcessorFactory.hpp  ctagSoundProcessorFactory.hpp.in  ctagSoundProcessorManager.hpp  ctagSoundProcessorMonoMultiply.cpp  ctagSoundProcessorMonoMultiply.hpp  ctagSoundProcessorStereoAM.cpp  ctagSoundProcessorStereoAM.hpp  plugin1.cpp  plugins.cpp  plugins.hpp  registerer.hpp
ctag/cmake/: JSONParser.cmake  bin2h.cmake
ctag/json/: CMakeLists.txt  bin2h.cmake  ctagSoundProcessorMonoMultiplier.json  ctagSoundProcessorMonoMultiply.json  ctagSoundProcessorStereoAM.json
